add home test files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>BudgetApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+      <%= javascript_include_tag "rails-ujs" %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,6 +14,9 @@
   <body>
    <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
+       <% if user_signed_in? %>
+        <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+       <%end%>
     <%= yield %>
   </body>
 </html>
