--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,7 +1,8 @@
 <div id="<%= dom_id category %>">
+
   <p>
     <strong>Name:</strong>
-    <%= category.name %>
+     <%= link_to category.name, category_deals_path(category) %> |
   </p>
 
   <p>
@@ -10,7 +11,7 @@
   </p>
 
   <p>
-    <strong>User:</strong>
+    <strong>Total amount Spent:</strong>
     <%= category.user_id %>
   </p>
 
