--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -6,9 +6,9 @@
   <% @deals.each do |deal| %>
     <%= render deal %>
     <p>
-      <%= link_to "Show this deal", deal %>
+      <%= link_to "Show this deal", category_deal_path(id: deal.id) %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New deal", new_deal_path %>
+<%= link_to "New deal", new_category_deal_path %>
