--- a/app/views/deals/new.html.erb
+++ b/app/views/deals/new.html.erb
@@ -1,3 +1,4 @@
+<%= button_to "<", category_deals_path, method: :get %>
 <h1>New deal</h1>
 
 <%= render "form", deal: @deal %>
@@ -5,5 +6,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to deals", deals_path %>
+  <%= link_to "Back to deals", category_deals_path %>
 </div>
