add homepage button

--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,5 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
+<%= button_to "<", categories_path, method: :get %>
+
 <h1>Deals</h1>
 
 <div id="deals">
