fix n+1 issues and logic requirements

--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -12,7 +12,7 @@
 
   <p>
     <strong>Total amount Spent:</strong>
-    <%= category.user_id %>
+    <%= category.deals.sum(:amount) %>
   </p>
 
 </div>
