--- a/app/views/deals/_form.html.erb
+++ b/app/views/deals/_form.html.erb
@@ -11,29 +11,23 @@
     </div>
   <% end %>
 
-  <div>
+  <div class="mb-6">
     <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", placeholder: "Enter Transaction name" %>
   </div>
 
-  <div>
+  <div class="mb-6">
     <%= form.label :amount, style: "display: block" %>
-    <%= form.number_field :amount %>
+    <%= form.number_field :amount, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", placeholder: "Enter Amount" %>
   </div>
 
-<div>
-  <%= form.label :category_id, "Select Categories" %>
-  <%
-=begin%>
- <%= form.select :category_id, options_for_select(Category.all.map { |category| [category.name, category.id] }), {}, name: 'deal[category_id]', class: 'form-control' %> 
-<%
-=end%>
-<%= form.select :category_id, options_for_select(Category.all.map { |category| [category.name, category.id] }), { }, { name: 'deal[category_ids][]', multiple: true, class: 'form-control' } %>
-
+<div class="mb-6">
+  <%= form.label :category_id, "Select Categories - hold down CTRL or cmd key to select multiple" %>
+  <%= form.select :category_id, options_for_select(Category.all.map { |category| [category.name, category.id] }), { }, { name: 'deal[category_ids][]', multiple: true, class: 'form-multiselect block w-full mt-1' } %>
 </div>
 
 
-  <div>
-    <%= form.submit %>
+  <div class="mb-6">
+    <%= form.submit  class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 w-60 m-auto block" %>
   </div>
 <% end %>
