--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,18 +1,15 @@
+
+<a href="<%= category_deals_path(category) %>">
 <div id="<%= dom_id category %>">
 
-  <p>
-    <strong>Name:</strong>
-     <%= link_to category.name, category_deals_path(category) %> |
-  </p>
-
-  <p>
-    <strong>Icon:</strong>
-    <%= category.icon %>
-  </p>
-
-  <p>
-    <strong>Total amount Spent:</strong>
-    <%= category.deals.sum(:amount) %>
-  </p>
+  <div class="category-card">
+      <%= image_tag category.icon, class: "category-icon"%>
+      <%= category.name %>
+    <p>
+      <strong>Total: </strong>$ 
+      <%= category.deals.sum(:amount) %>
+    </p>
+  </div>
 
 </div>
+</a>
