--- a/app/views/deals/_deal.html.erb
+++ b/app/views/deals/_deal.html.erb
@@ -1,17 +1,10 @@
-<div id="<%= dom_id deal %>">
-  <p>
-    <strong>Name:</strong>
-    <%= deal.name %>
-  </p>
-
-  <p>
-    <strong>Amount:</strong>
+<div id="<%= dom_id deal %>" class="deal-card">
+      <h1 class="text-gray-700 deal-name"><%= deal.name %></h1>
+       <p  class="text-gray-700">
+    <strong>Amount:</strong> $ 
     <%= deal.amount %>
   </p>
-
-  <p>
-    <strong>Author:</strong>
-    <%= deal.author_id %>
-  </p>
+ 
 
 </div>
+
