--- a/app/views/deals/edit.html.erb
+++ b/app/views/deals/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this deal", @deal %> |
-  <%= link_to "Back to deals", deals_path %>
+  <%= link_to "Show this deal", category_deal_path(id: @deal.id) %> |
+  <%= link_to "Back to deals", category_deal_path(id: @deal.id) %>
 </div>
