--- a/app/views/deals/_deal.html.erb
+++ b/app/views/deals/_deal.html.erb
@@ -1,10 +1,7 @@
-<div id="<%= dom_id deal %>" class="deal-card">
+<div id="<%= dom_id deal %>" class="category-card deal-card flex flex-row">
       <h1 class="text-gray-700 deal-name"><%= deal.name %></h1>
-       <p  class="text-gray-700">
-    <strong>Amount:</strong> $ 
-    <%= deal.amount %>
-  </p>
- 
 
+        <span><strong>$ <%= deal.amount %></strong> </span>
+      
 </div>
 
