--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,26 +1,23 @@
 <% if user_signed_in? %>
-    <nav class="bg-blue-800">
+    <nav class="blue-background">
       <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
         <div class="relative flex h-16 items-center justify-between">
           <div class="absolute inset-y-0 left-0 flex items-center">
-            <%= button_to "<", categories_path, method: :get, class: "relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" %>
+            <%= button_to "<", categories_path, method: :get, class: "relative inline-flex items-center justify-center rounded-md p-2 text-xl text-white hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" %>
           </div>
           <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start sm:ml-6">
             <div class="flex flex-shrink-0 items-center sm:ml-6">
               <span class="text-white">TRANSACTIONS</span>
             </div>
           </div>
-          <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-            <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "focus:outline-none text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900" %>
-          </div>
+
         </div>
       </div>
     </nav>
   <%end%>
-  <div class="flex flex-col items-center justify-center bg-gray-100 dark:bg-gray-900">
-    <div class="flex flex-col items-center justify-center">
-      <h1 class="text-xl font-bold text-gray-700 dark:text-white mb-2">Total amount spent: $<%= @total_amount_spent %> </h1>
-    </div>
+  <div class="deal-card flex flex-row items-center justify-between">
+    <span class="text text-gray">Amount spent: </span>
+    <h1 class="text-xl font-bold text-gray-700 dark:text-white mb-2">$<%= @total_amount_spent %> </h1>
   </div>
  
 <div id="deals">
@@ -34,4 +31,4 @@
 <%end%>
 </div>
 
-<%= link_to "NEW TRANSACTION", new_category_deal_path, class: "text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center w-60 m-auto block" %>
+<%= link_to "NEW TRANSACTION", new_category_deal_path, class: "add-btn text-white green-background focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center w-full" %>
