--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,6 +20,6 @@
   </div>
 </div>
   <div class="all text-center width-90">
-          <%= link_to "Log In ", new_user_session_path, class: "add-btn text-sm font-semibold leading-6 m-auto text-gray-900 pb-2"  %>
-          <%= link_to "Sign Up", new_user_registration_path, class: "top-2 mb-5 add-btn blue-background m-auto px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"%>
+          <%= link_to "Log In ", new_user_session_path, class: "add-btn login-btn text-sm font-semibold leading-6 m-auto text-gray-900 pb-2"  %>
+          <%= link_to "Sign Up", new_user_registration_path, class: "top-2 mb-5 login-btn add-btn blue-background m-auto px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"%>
   </div>
