--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,6 +2,13 @@
   margin: auto;
 }
 
+.rounded {
+  border: 2px solid #f2f2f2;
+  border-radius: 15%;
+  height: 40px;
+  width: 4.5rem;
+}
+
 .category-card {
   border: 1px solid #f2f2f2;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
@@ -94,6 +101,10 @@
   right: 0;
   left: 0;
   height: 50px;
+}
+
+.login-btn {
+  padding-top: 10px;
 }
 
 .all > a {
