--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,11 +11,11 @@
           </div>
           <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start sm:ml-6">
             <div class="flex flex-shrink-0 items-center sm:ml-6">
-              <span class="text-white">CATEGORIES</span>
+              <small class="text-white">CATEGORIES</small>
             </div>
           </div>
           <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-            <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "focus:outline-none text-white font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900" %>
+            <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "rounded text-white" %>
           </div>
         </div>
       </div>
