--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,12 +8,12 @@
             <%= link_to "<", root_url, class: "text-xl relative inline-flex items-center justify-center rounded-md p-2 text-white hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" %>
           </div>
           <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start sm:ml-6">
-            <div class="flex flex-shrink-0 items-center sm:ml-6">
+            <div class="flex flex-shrink-0 sm:ml-6">
               <span class="text-white">SIGN UP</span>
             </div>
           </div>
           <div class="point absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-            <%= f.submit "Sign Up", class: "point text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 w-40 block m-auto"%>
+            <%= f.submit "Sign Up", class: "text-white rounded"%>
           </div>
         </div>
       </div>
