--- a/app/views/deals/_form.html.erb
+++ b/app/views/deals/_form.html.erb
@@ -7,11 +7,11 @@
           </div>
           <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start sm:ml-6">
             <div class="flex flex-shrink items-center sm:ml-6">
-              <span class="text-white">NEW TRANSACTION</span>
+              <small class="text-white">NEW TRANSACTION</small>
             </div>
           </div>
           <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-            <%= form.submit class: "point focus:outline-none text-white  focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900" %>
+            <%= form.submit "Add", class: "rounded text-white" %>
           </div>
         </div>
       </div>
