--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
       </div>
 
       <div class="text-center mt-5 typing-effect">
-       <span class="hidden text-md mt-5 font-bold tracking-tight text-gray sm:text-xl">Daniel Ochuba</span>
+       <span class="hidden text-md font-bold tracking-tight text-gray sm:text-xl">Daniel Ochuba</span>
       </div>
 
     </div>
