show amount spent

--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -17,7 +17,7 @@
   <%end%>
   <div class="deal-card flex flex-row items-center justify-between">
     <span class="text text-gray">Amount spent: </span>
-    <h1 class="text-xl font-bold text-gray-700 dark:text-white mb-2">$<%= @total_amount_spent %> </h1>
+    <h1 class="text font-bold text-gray-700 dark:text-white mb-2">$<%= @total_amount_spent %> </h1>
   </div>
  
 <div id="deals">
