--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -33,5 +33,5 @@
 </div>
 <%end%>
 <div class="blue-background w-full">
-<%= link_to "ADD CATEGORY", new_category_path, class: "green-background text-white hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium text-sm px-5 py-2.5 text-center w-full m-auto block add-btn" %>
+<%= link_to "ADD CATEGORY", new_category_path, class: "green-background text-white hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium text-sm px-5 py-2.5 text-center w-full m-auto block" %>
 </div>
