--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -17,7 +17,7 @@
   <%end%>
   <div class="deal-card flex flex-row items-center justify-between">
     <span class="text text-gray">Amount spent: </span>
-    <span class="text font-bold text-gray-400 dark:text-white">$<%= @total_amount_spent %> </span>
+    <span class="text font-bold text-gray">$<%= @total_amount_spent %> </span>
   </div>
  
 <div id="deals">
